version/0.23/_sources/api/solver/_autosummary/settings/interaction_1.rst.txt
:orphan:

.. _interaction_1:

interaction
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.interaction_1.interaction
    :show-inheritance:

.. rubric:: Attributes

==================================================   ================================

Attribute                                                                     Summary

==================================================   ================================
:ref:`continuous_phase <continuous_phase>`                      Phase of Interaction.

:ref:`volume_displacement <volume_displacement_1>`       'volume_displacement' child.

==================================================   ================================

.. rubric:: Included in:

==========================================   ======================================

Parent                                                                      Summary

==========================================   ======================================
:ref:`injections_child <injections_child>`       'child_object_type' of injections.

==========================================   ======================================

